--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -871,7 +871,7 @@ generates the witnesses and tries to compile them.
 There are three possible outcomes:
 \begin{itemize}
 	\item the baseline compiles and the current doesn't compile, so it's a correct witness,
-	\item both the baseline and current compiles, which indicates a false-positive and a bug in cargo-semver-checks,
+	\item both the baseline and current compile, which indicates a false-positive and a bug in cargo-semver-checks,
 	\item the baseline doesn't compile, which means that the witness was wrongly constructed.
 \end{itemize}
 
