--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -872,7 +872,7 @@ There are three possible outcomes:
 \begin{itemize}
 	\item the baseline compiles and the current doesn't compile, so it's a correct witness,
 	\item both the baseline and current compile, which indicates a false-positive and a bug in cargo-semver-checks,
-	\item the baseline doesn't compile, which means that the witness was wrongly constructed.
+	\item the baseline does not compile, which means that the witness was constructed incorrectly.
 \end{itemize}
 
 We stumbled on some complications while creating the witnesses for some of the lints.
