--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -875,7 +875,7 @@ There are three possible outcomes:
 	\item the baseline does not compile, which means that the witness was constructed incorrectly.
 \end{itemize}
 
-We stumbled on some complications while creating the witnesses for some of the lints.
+We stumbled upon some complications while creating the witnesses for some of the lints.
 We had the importable path of an item, but we didn't have any information
 about generics or traits, which the Rust compiler requires to have in the source code
 (e.g. a function could take a generic argument which type needs to be declared when passing to the function).
