--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -877,7 +877,7 @@ There are three possible outcomes:
 
 We stumbled upon some complications while creating the witnesses for some of the lints.
 We had the importable path of an item, but we didn't have any information
-about generics or traits, which the Rust compiler requires to have in the source code
+about generics or traits, which the Rust compiler requires to be in the source code
 (e.g. a function could take a generic argument which type needs to be declared when passing to the function).
 Most of the cases were solved by writing a script that iterates over the number of generic arguments
 and checks whether a witness with this number of generic argument successfully compiles.
