--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -883,7 +883,7 @@ Most cases were solved by writing a script that iterates over the number of gene
 and checks whether a witness with some number of generic argument successfully compiles.
 The other cases required the generic types to satisfy some traits,
 which is much harder to automate or even write manually.
-Thus we decided that we'll skip checking some of the reports that required using generic types with traits.
+Thus we decided that we would skip checking some of the reports that required using generic types with traits.
 
 In some lints we could choose between simply importing the given item
 (e.g. by \texttt{use importable\_path;}) or by creating a source code that uses the given item.
