--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -885,8 +885,8 @@ The other cases required the generic types to satisfy some traits,
 which is much harder to automate or even write manually.
 Thus we decided that we would skip checking some of the reports that required using generic types with traits.
 
-In some lints we could choose between simply importing the given item
-(e.g. by \texttt{use importable\_path;}) or by creating a source code that uses the given item.
+For some lints we could choose between simply importing the given item
+(e.g. by \texttt{use importable\_path;}) or creating a source code that uses it.
 Simply importing the item can be seen as not convincing and not visually appealing (it doesn't use any item properties,
 e.g. it just uses the function name but it doesn't use the fact that it's a function and doesn't call the function),
 so we decided to generate witnesses with the more robust Rust code when possible
