--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1049,19 +1049,16 @@ goals regarding performance at that time, he decided to do some useful research 
 and provided us with its helpful results. What is more, he was so excited about the possible
 improvements that he decided to contribute and implemented them \cite{user-contribution-1}.
 
-TODO:
-\begin{itemize}
-	\item show how the number of downloads has changed
-	\item show how the number of stars on GitHub has changed
-	\item describe how our work might have impacted those results
-	\item show the comments of users on GitHub.
-		As one of the examples, give the maintainer of a big
-		library that created an issue \say{Make continuous integration runs faster}
-		and after learning about one of our PRs to make the continuous integration faster,
-		he was so excited that he wrote a comment with a tip in our PR.
-		Search also for other such examples in the PRs and issues.
-	\item list the maintainers of big libraries that started using the tool during our development
-\end{itemize}
+So far cargo-semver-checks has earned the trust of many projects' maintainers. Among them are some
+of the largest and most iconic Rust crates, such as tokio (library for concurrent programming)
+and libp2p (modular library for peer-to-peer networking). There are also numerous projects from
+companies widely known outside the Rust community as well -- the tool has been adopted by Amazon,
+Microsoft and Mozilla. Developers have even built third party integrations to bring
+cargo-semver-checks into other systems -- the tool is available in nixOS, has been introduced
+into release managers like release-plz, and is used by Arch Linux distribution.
+With those and many more usage scenarios, cargo-semver-checks has proven its versatility
+in the vast, diverse world of semantic versioning.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %            Bibliography             %
