--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -892,7 +892,7 @@ e.g. it uses the function name but does not call the function itself).
 so we decided to generate witnesses with the more robust Rust code when possible
 and use the import technique as a fallback when it didn't compile.
 
-We stumbled on the last complication when we tried to create witnesses for the e.g. \texttt{enum\_variant\_added} lint.
+We had one last difficulty when we tried to create witnesses for the e.g. \texttt{enum\_variant\_added} lint.
 To construct a witness for it, one has to match on the given enum and exhaustively pattern-match
 on all of the enum's variants. The output only contained the name of the variant that was added,
 not all of the enum's variants. To retrieve the list of all variants, we wrote a separate
