--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -852,7 +852,7 @@ which consists of two small crates:
 		and does not compile.
 \end{itemize}
 Both crates must have exactly the same code (same \texttt{src/lib.rs} file),
-but different manifests.
+but slightly different manifests.
 Thus, a witness is made of just three short files -- a source code that uses the item that
 broke semver and two manifests that only differ in the \texttt{[dependency]} section
 (they have the same crate name as a dependency, but two different versions of it).
