--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -902,8 +902,7 @@ and running a Trustfall query that finds the enum with the given importable path
 all of its variants. Having passed the newly-acquired data to the Python script,
 we could then automatically construct its witness.
 
-Some lints were triggered only a few times, so it was faster to manually write witnesses for them
-instead of expanding the Python script's functionality.
+Some lints were triggered only a couple times, so instead of expanding the Python script's functionality, it was faster to manually write witnesses for them.
 There was also the \texttt{struct\_repr\_c\_removed} lint that reported a breaking change.
 However, the issue was based on creating an undefined behavior rather than a compilation error,
 making it difficult to create a witness.
