--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -757,22 +757,23 @@ amongst the one thousand most downloaded Rust crates.
 This section presents the results we got and the following one (\ref{r:section_generating_witnesses})
 describes how we managed to obtain them.
 
-TODO: calculate Xi constants.
+We considered only non-yanked releases of those crates which aren't a major change
+that were published after 2017-01-01. From those releases, 919 of them didn't compile on our machines
+with the current version of Rust.
+Thus, we considered in total 14 389 releases (which is also the number of times
+cargo-semver-checks has been ran).
 
-Those crates have X0 total releases (at the time of writing)
-that were published after 01-01-2017, X1 of which do not compile anymore with the current version of Rust
-and X2 of the remaining ones were yanked.
-
-From the X3 non-yanked releases which we were able to compile,
+From those non-yanked non-major releases which we were able to compile,
 \textbf{in 470 of them we found one or more semver breaks}.
+Thus, on average, we found at least one break in 1 out of 30 releases.
 In total, different lints were triggered 655 times with 3305 items reported 
 (one release can trigger multiple lints, each of them reporting multiple items in the sourcecode that broke semver).
 
 For every true-positive we constructed a \texttt{witness} -- a short Rust code
 proving that a particular item indeed breaks server.
-Each witness can be compiled using one version of a crate
+Each witness can be compiled using one version of a crate,
 but results in a compilation error for the other version.
-Moreover, for each result we have viewed its sourcecode to confirm
+Moreover, for each result we have viewed its source code to confirm
 that it is part of the public API accessible by the user. Thus, we are confident that each
 result is a real true-positive.
 
@@ -810,6 +811,8 @@ and how many items in total it has reported:
 		enum\_struct\_variant\_field\_added & $1$ & $1$ & $1$ \\
 	\end{tabular}
 \end{center}
+
+TODO: calculate Xi constants.
 
 X8-explain-implications
 
