--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -719,42 +719,53 @@ The differences between the V1 and V2 of the action are further discussed in sec
 
 \section{The lint set expansion}\label{r:section_new_lints}
 
-The continuosly expanding list of lints is the heart of the project.
+The continuously expanding list of lints is the heart of the project.
 Before our contributions, there were 18 existing lints.
 We have managed to implement many new ones:
 \begin{itemize}
     \item {\ttfamily enum\_marked\_non\_exhaustive}
-        -- detects marking an {\ttfamily Enum} as {\ttfamily \#[non\_exhaustive]},
+        -- detects marking an {\ttfamily Enum} as {\ttfamily \#[non\_exhaustive]}, removing the ability to match on them;
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/155
     \item {\ttfamily enum\_struct\_variant\_field\_missing}
         -- detects missing fields in a struct variant of an {\ttfamily Enum},
+        which changes how the variant must be initialized;
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/156
     \item {\ttfamily function\_parameter\_count\_changed}
         -- detects functions with changed parameter count,
+        changing the way the function umst be called.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/170
     \item {\ttfamily tuple\_struct\_to\_plain\_struct}
         -- detects changing struct kind from tuple to plain,
+        changing the way the struct must be initailized.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/249
     \item {\ttfamily trait\_unsafe\_added}
         -- detects marking a {\ttfamily Trait} as {\ttfamily unsafe},
+        removing the ability to do a safe {\ttfamily impl}.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/252
     \item {\ttfamily trait\_unsafe\_removed}
         -- detects removing {\ttfamily unsafe} marker from a {\ttfamily Trait},
+        removing the ability to do a unsafe {\ttfamily impl}.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/252
     \item {\ttfamily enum\_must\_use\_added}
         -- detects marking an {\ttfamily Enum} with the {\ttfamily \#[must\_use]} attribute,
+        removing the ability to ignore it, when returned from a function.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/278
     \item {\ttfamily struct\_must\_use\_added}
         -- detects marking a struct with the {\ttfamily \#[must\_use]} attribute,
+        removing the ability to ignore it, when returned from a function.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/279
     \item {\ttfamily trait\_must\_use\_added}
         -- detects marking a {\ttfamily Trait} with the {\ttfamily \#[must\_use]} attribute,
+        removing the ability to ignore an object with dynamic type implementing
+        this trait, when returned from a function.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/280
     \item {\ttfamily function\_must\_use\_added}
         -- detects marking a function with the {\ttfamily \#[must\_use]} attribute,
+        removing the ability to ignore the function's result.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/281
     \item {\ttfamily inherent\_method\_must\_use\_added}
         -- detects marking a method with the {\ttfamily \#[must\_use]} attribute,
+        removing the ability to ignore the method's result.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/283
 \end{itemize}
 To enable the new lints, we had to do some development of the Trustfall rustdoc adapter. 
