--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -736,7 +736,7 @@ We have managed to implement many new ones:
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/170
     \item {\ttfamily tuple\_struct\_to\_plain\_struct}
         -- detects changing struct kind from tuple to plain,
-        changing the way the struct must be initailized.
+        changing the way the struct must be initialized.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/249
     \item {\ttfamily trait\_unsafe\_added}
         -- detects marking a {\ttfamily Trait} as {\ttfamily unsafe},
