--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -732,7 +732,7 @@ We have managed to implement many new ones:
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/156
     \item {\ttfamily function\_parameter\_count\_changed}
         -- detects functions with changed parameter count,
-        changing the way the function umst be called.
+        changing the way the function must be called.
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/170
     \item {\ttfamily tuple\_struct\_to\_plain\_struct}
         -- detects changing struct kind from tuple to plain,
