--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -892,8 +892,8 @@ For some lints we could choose between simply importing the given item
 (e.g. by \texttt{use importable\_path;}) or creating a source code that uses it.
 Since just importing the item can be seen as not convincing and not visually appealing (it does not use any item properties,
 e.g. it uses the function name but does not call the function itself).
-so we decided to generate witnesses with the more robust Rust code when possible
-and use the import technique as a fallback when it didn't compile.
+Thus, we decided to generate witnesses with the more convincing technique of writing the more realistic Rust code whenever possible
+and used the pure imports as a fallback when it failed to compile.
 
 We had one last difficulty when we tried to create witnesses for the e.g. \texttt{enum\_variant\_added} lint.
 To construct a witness for it, one has to exhaustively pattern-match
