--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -729,11 +729,11 @@ possible to use different configuration for the current and baseline version.
 This is important because some functionalities may change between features. What is more,
 crates often have a feature that breaks semver by design, which
 we discovered when working on the semver-crater \ref{r:section_results_semver_crater}.
-Now the users can adjust them for their specific use cases.
+Now the users can adjust the set of features for their specific use cases.
 
 The new default behaviour is to include all the features,
-filtering out heuristicly the ones that break semver by looking at 
-the feature's name. For example, feature {\ttfamily unstable} would not be
+filtering out heuristically the ones that break semver by looking at
+the feature's name. For example, a feature named {\ttfamily unstable} would not be
 included. The list of banned names was created by looking
 at different features in popular crates.
 
