--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -745,7 +745,7 @@ the caching mechanism is not used when a user changes the enabled features
 (which might change the rustdoc).
 
 We also improved the user experience by spotting and fixing a couple bugs
-in the command-line interface: both in the tool's behaviour
+in the command-line interface -- both in the tool's behaviour
 in combination with specific flags and in its output messages.
 For details, see section \ref{r:section_bugfixes}.
 
