--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -732,36 +732,36 @@ We have managed to implement many new ones:
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/156
     \item {\ttfamily function\_parameter\_count\_changed}
         -- detects functions with changed parameter count,
-        changing the way the function must be called.
+        changing the way the function must be called;
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/170
     \item {\ttfamily tuple\_struct\_to\_plain\_struct}
         -- detects changing struct kind from tuple to plain,
-        changing the way the struct must be initialized.
+        changing the way the struct must be initialized;
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/249
     \item {\ttfamily trait\_unsafe\_added}
         -- detects marking a {\ttfamily Trait} as {\ttfamily unsafe},
-        removing the ability to do a safe {\ttfamily impl}.
+        removing the ability to do a safe {\ttfamily impl};
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/252
     \item {\ttfamily trait\_unsafe\_removed}
         -- detects removing {\ttfamily unsafe} marker from a {\ttfamily Trait},
-        removing the ability to do an unsafe {\ttfamily impl}.
+        removing the ability to do an unsafe {\ttfamily impl};
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/252
     \item {\ttfamily enum\_must\_use\_added}
         -- detects marking an {\ttfamily Enum} with the {\ttfamily \#[must\_use]} attribute,
-        removing the ability to ignore the enum when returned from a function.
+        removing the ability to ignore the enum when returned from a function;
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/278
     \item {\ttfamily struct\_must\_use\_added}
         -- detects marking a struct with the {\ttfamily \#[must\_use]} attribute,
-        removing the ability to ignore the struct when returned from a function.
+        removing the ability to ignore the struct when returned from a function;
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/279
     \item {\ttfamily trait\_must\_use\_added}
         -- detects marking a {\ttfamily Trait} with the {\ttfamily \#[must\_use]} attribute,
         removing the ability to ignore a function's result, when it is returning an object
-        with dynamic type that implements this trait
+        with dynamic type that implements this trait;
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/280
     \item {\ttfamily function\_must\_use\_added}
         -- detects marking a function with the {\ttfamily \#[must\_use]} attribute,
-        removing the ability to ignore the function's result.
+        removing the ability to ignore the function's result;
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/281
     \item {\ttfamily inherent\_method\_must\_use\_added}
         -- detects marking a method with the {\ttfamily \#[must\_use]} attribute,
@@ -769,15 +769,16 @@ We have managed to implement many new ones:
         % https://github.com/obi1kenobi/cargo-semver-checks/pull/283
 \end{itemize}
 To enable the new lints, we had to do some development of the Trustfall rustdoc adapter. 
-It mainly resolved around extending its schema and the changes were simple most of the time.
-The real challenge there was to design it in a way that would not become troublesome to work with in the future.
+It mainly resolved around extending its schema and implementing the changes.
+The challenge was to design new interface in a way that would
+make it still possible to extend it without problems in the future.
 
 One of the notable changes in the schema involved attributes.
 It originally exported its value as a string, which made traversing
 its inner tags in lints not possible. 
 The solution was to refactor it into a proper tree structure.
 This meant that we had to introduce a breaking change there
-and do minor adjustments the existing lints, 
+and do minor adjustments in the existing lints, 
 making it more future-proof this time.
 % https://github.com/obi1kenobi/cargo-semver-checks/pull/171
 
