--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -685,7 +685,7 @@ This makes the JSON format a~natural candidate for running Trustfall queries. Ho
 to be transformed into a~structure that is understandable for Trustfall, namely a~graph in which
 vertices are assigned types and type-dependent properties.
 
-This is where trustfall-rustdoc-adapter comes in. It provides an interface for querying
+This is where trustfall-rustdoc-adapter comes in. It provides an interface (called schema) for querying
 the rustdoc's output by associating JSON nodes with Trustfall vertices. To achieve this, the adapter
 implements the following methods:
 \begin{itemize}
