--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -933,8 +933,8 @@ with the following ways to write them:
 				\texttt{trait\_missing}
 			\end{tabular} &
 			\multicolumn{1}{Sl|}{\parbox{.5\linewidth}{
-				a generic function (with possibly multiple generic arguments) that takes
-				a generic argument satisfying the trait
+				a generic function (with one or more generic arguments) that takes
+				a generic argument satisfying the missing trait
 			}} \\
 		\hline
 			\begin{tabular}[c]{@{}l@{}}
