--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -926,7 +926,7 @@ with the following ways to write them:
 				\texttt{struct\_missing}
 			\end{tabular} &
 			\multicolumn{1}{Sl|}{\parbox{.5\linewidth}{
-				a (possibly generic) function that takes the item as an argument
+				a function (possibly a generic one) that takes the missing item as an argument
 			}} \\
 		\hline
 			\begin{tabular}[c]{@{}l@{}}
