--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -911,8 +911,7 @@ However, the issue was based on creating an undefined behavior rather than a com
 making it difficult to create a witness.
 Thus we decided to make an exception and manually verify whether it was indeed a semver-break.
 
-After all the work, our Python script is able to create the following witness kinds
-with the following ways to write them:
+In the end, our Python script is able to create the following witnesses:
 \begin{table}[h]
 	\centering
 	% adjust the fractions here so that it looks nice (MUST sum up to 1)
