--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -963,7 +963,7 @@ In the end, our Python script is able to create the following witnesses:
 				\texttt{enum\_variant\_missing}
 			\end{tabular} &
 			\multicolumn{1}{Sl|}{\parbox{.5\linewidth}{
-				deconstructing the enum with an \texttt{if} to the given variant
+				a deconstruction of the enum with an \texttt{if} that requires the missing variant
 			}} \\
 		\hline
 			\begin{tabular}[c]{@{}l@{}}
