--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -874,7 +874,7 @@ generates the witnesses and tries to compile them.
 There are three possible outcomes:
 \begin{itemize}
 	\item the baseline compiles and the current does not compile, which means the witness has confirmed that there is a true-positive,
-	\item both the baseline and current compile, which indicates a false-positive and a bug in cargo-semver-checks,
+	\item both the baseline and current compile, which indicates a false-positive or a bug in one of the dependencies used by cargo-semver-checks,
 	\item the baseline does not compile, which means that the witness was constructed incorrectly.
 \end{itemize}
 
