--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -951,7 +951,8 @@ In the end, our Python script is able to create the following witnesses:
 			}} \\
 		\hline
 			\begin{tabular}[c]{@{}l@{}}
-				TODO \texttt{trait\_implementation\_removed}
+				\texttt{auto\_trait\_impl\_removed} \\
+				\texttt{derive\_trait\_impl\_removed}
 			\end{tabular} &
 			\multicolumn{1}{Sl|}{\parbox{.5\linewidth}{
 				a helper function that takes a generic argument satisfying the given trait
