--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -993,9 +993,9 @@ cargo-semver-checks has over 63 000 downloads from the crates.io registry \cite{
 This number can be split down into three components:
 \begin{itemize}
 	\item over 22 900 downloads before we started contributing to the project (period of 5 months),
-	\item over 32 700 downloads during our contribution, before the release of pre-built executable
-		binaries (period of 3 months)
-	\item over 7 400 downloads during our contribution, after the release of pre-built executable
+	\item over 32 700 downloads during our contributions, before the release of pre-built executable
+		binaries (period of 3 months),
+	\item over 7 400 downloads during our contributions, after the release of pre-built executable
 		binaries (period of 3 months)
 \end{itemize}
 \begin{figure}[h]
