--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -996,7 +996,7 @@ This number can be split down into three components:
 	\item over 32 700 downloads during our contributions, before the release of pre-built executable
 		binaries (period of 3 months),
 	\item over 7 400 downloads during our contributions, after the release of pre-built executable
-		binaries (period of 3 months)
+		binaries (period of 3 months).
 \end{itemize}
 \begin{figure}[h]
 	\centering
