--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1005,7 +1005,7 @@ This number can be split down into three components:
 \end{figure}
 The release of binaries was a big change for how the tool is used and had its effect on
 the project's downloads. Originally a repository using cargo-semver-checks would most often
-download the same version multiple times, for example every time a CI run took place the tool
+download the same version multiple times. For example, every time a CI run took place the tool
 would be downloaded from crates.io and built locally from scratch. This resulted in a big variation
 of downloads per release, depending on factors such as how long it has been since the most
 recent one. However, with pre-builds now available, most projects download the newest version
