--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1015,7 +1015,7 @@ quite the contrary, as the current number of over 2 000 downloads per release be
 how many repositories actively use cargo-semver-checks.
 
 Another measure of cargo-semver-checks' recognition among the community are GitHub stars.
-Every user can star any number of repositories they like, whereas they want to show
+Every user can star any repositories they like, no matter whether they want to show
 their appreciation of one's project or just bookmark it for easier finding in the future.
 When we started working on the tool in October 2022 it had just over 200 stars.
 7 months have passed and after our contributions the star count has almost doubled,
