--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1017,7 +1017,7 @@ how many repositories actively use cargo-semver-checks.
 Another measure of cargo-semver-checks' recognition among the community are GitHub stars.
 Every user can star any repositories they like, no matter whether they want to show
 their appreciation of one's project or just bookmark it for easier finding in the future.
-When we started working on the tool in October 2022 it had just over 200 stars.
+When we started working on the tool in October 2022, it had just over 200 stars.
 7 months have passed and after our contributions the star count has almost doubled,
 reaching above 400.
 \begin{figure}[h]
