--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1027,7 +1027,7 @@ reaching above 400.
 \end{figure}
 
 There are multiple reasons behind this great increase in cargo-semver-checks popularity. While it
-is impossible to point out a single, main factor, there are several (with no specific order) that
+is impossible to point out a single, main factor, those are the several (with no specific order) that
 resulted in the tool's undoubtful success:
 \begin{itemize}
 	\item regular implementation of new lints that increased the tool's effectiveness,
