--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1049,7 +1049,7 @@ goals regarding performance at that time, he decided to do some useful research 
 and provided us with its helpful results. What is more, he was so excited about the possible
 improvements that he decided to contribute and has implemented them \cite{user-contribution-1}.
 
-So far cargo-semver-checks has earned the trust of many projects' maintainers. Among them are some
+So far, cargo-semver-checks has earned the trust of many projects' maintainers. Among them are some
 of the largest and most iconic Rust crates, such as tokio (library for concurrent programming)
 and libp2p (modular library for peer-to-peer networking). There are also numerous projects from
 companies widely known outside the Rust community as well -- the tool has been adopted by Amazon,
