--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -754,8 +754,8 @@ TODO:
 
 Thanks to cargo-semver-checks, we were able to find numerous true-positives
 amongst the one thousand most downloaded Rust crates.
-This section presents the results we got and the following one (\ref{r:section_generating_witnesses})
-describes how we managed to obtain them.
+This section is a presentation of all the results we got. To learn more about
+how we managed to obtain them, see section \ref{r:section_generating_witnesses}.
 
 We considered only non-yanked releases of those crates which aren't a major change
 that were published after 2017-01-01. From those releases, 919 of them didn't compile on our machines
