--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -757,10 +757,10 @@ amongst the one thousand most downloaded Rust crates.
 This section is a presentation of all the results we got. To learn more about
 how we managed to obtain them, see section \ref{r:section_generating_witnesses}.
 
-We considered only non-yanked releases of those crates which aren't a major change
-that were published after 2017-01-01. From those releases, 919 of them didn't compile on our machines
-with the current version of Rust.
-Thus, we considered in total 14 389 releases (which is also the number of times
+We considered only non-yanked releases of those crates which were published
+after 2017-01-01 and are not a major change. From those releases,
+919 did not compile on our machines with the current version of Rust.
+Thus, we considered 14 389 releases in total (which is also the number of times
 cargo-semver-checks has been ran).
 
 From those non-yanked non-major releases which we were able to compile,
