--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -763,7 +763,7 @@ after 2017-01-01 and are not a major change. From those releases,
 Thus, we considered 14 389 releases in total (which is also the number of times
 cargo-semver-checks has been ran).
 
-From those non-yanked non-major releases which we were able to compile,
+From those non-yanked, non-major releases which we were able to compile,
 \textbf{in 470 of them we found one or more semver breaks}.
 Thus, on average we found at least one break in 1 out of 30 releases.
 Those releases are in 173 different crates (out of 1000).
