--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -765,7 +765,7 @@ cargo-semver-checks has been ran).
 
 From those non-yanked, non-major releases which we were able to compile,
 \textbf{in 470 of them we found one or more semver breaks}.
-Thus, on average we found at least one break in 1 out of 30 releases.
+This means that on average every 1 in 30 releases that we checked had at least one semver break.
 Those releases are in 173 different crates (out of 1000).
 In total, different lints were triggered 655 times with 3305 items reported 
 (one release can trigger multiple lints, each of them reporting multiple items in the source code that broke semver).
