--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -767,7 +767,7 @@ From those non-yanked, non-major releases which we were able to compile,
 \textbf{in 470 of them we found one or more semver breaks}.
 This means that on average every 1 in 30 releases that we checked had at least one semver break.
 Those releases are in 173 different crates (out of 1000).
-In total, different lints were triggered 655 times with 3305 items reported 
+In total, different lints were triggered 655 times and reported 3305 items. 
 (one release can trigger multiple lints, each of them reporting multiple items in the source code that broke semver).
 
 For every true-positive we constructed a \texttt{witness} -- a short Rust code
