--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -813,10 +813,9 @@ and how many items in total it has reported:
 	\end{tabular}
 \end{center}
 
-All of the detected true-positives (with their witnesses) can be found in a GitHub repository \cite{github-csv-results}
-in both a human-readable and a machine-readable form.
-All of the results (both true-positives and false-positives / bugs) are provided
-in a human-readable form.
+All of the detected true-positives (with their witnesses) can be found in a GitHub repository \cite{github-csv-results}.
+They are provided in both human-readable and machine-readable form.
+The remaining results (false-positives and bugs) are provided only in human-readable form.
 
 \section{The process of gathering results (semver-crater)}\label{r:section_results_semver_crater}
 
