--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1003,7 +1003,7 @@ This number can be split down into three components:
 	\includegraphics[width=\linewidth]{crates-io-downloads-total.png}
 	\caption{cargo-semver-checks on crates.io, May 2023}
 \end{figure}
-The release of binaries was a big change for how the tool is used and had its effect on
+The release of binaries was a big change for how the tool is accessed and had its effect on
 the project's downloads. Originally a repository using cargo-semver-checks would most often
 download the same version multiple times. For example, every time a CI run took place the tool
 would be downloaded from crates.io and built locally from scratch. This resulted in a big variation
