--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1031,7 +1031,7 @@ is impossible to point out a single, main factor, those are the several (with no
 resulted in the tool's undoubtful success:
 \begin{itemize}
 	\item regular implementation of new lints that increased the tool's effectiveness,
-	\item introduction of the pre-built executable binaries with their convenience of use,
+	\item introduction of the pre-built executable binaries with their ease of use,
 	\item release and improvements of the GitHub action for continuous integration,
 	\item numerous optimalizations of the tool's performance (done both by us in
 		cargo-semver-checks and by our mentor in the trustfall engine),
